cmake_minimum_required(VERSION 2.8)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

#project(torus)
#add_executable(torus torus.cpp)
#find_package(OpenGL REQUIRED)
#find_package(GLUT REQUIRED)
#include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
#target_link_libraries(torus ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )

#project(lightlab)
#add_executable(lightlab lightlab.c)
#find_package(OpenGL REQUIRED)
#find_package(GLUT REQUIRED)
#include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
#target_link_libraries(lightlab ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )

#project(mesh_gui)
#add_executable(mesh_gui mesh_gui.cpp SmfModel.h SmfModel.cpp)
#find_package(OpenGL REQUIRED)
#find_package(GLUT REQUIRED)
#find_package(GLUI REQUIRED)
#include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLUI_INCLUDE_DIRS} )
#target_link_libraries(mesh_gui ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLUI_LIBRARY} )

project(smf_view)
add_executable(smf_view main.cpp MeshGui.h MeshGui.cpp SmfModel.h SmfModel.cpp)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLUI REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLUI_INCLUDE_DIRS} )
target_link_libraries(smf_view ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLUI_LIBRARY} )
